# liveStream

./: .gitignore  CMakeLists.txt  README.md  user.proto
backup/: CMakeLists.txt
src/: CMakeLists.txt  QueryUser.cpp  ServiceRegistrar.cpp  ServiceRegistrar.h  UserController.cpp  UserService.cpp  UserService.h  UserServiceInterface.h  client.cpp  config.h  controller.cpp  controller.h  dto.h  httpServer.cpp  initTables.h  main.cpp  redisConnect.cpp  redisConnect.h  register.cpp  server.cpp  sqlConnect.cpp  sqlConnect.h  tables.h  tables.sql  user.cpp  user.grpc.pb.cc  user.grpc.pb.h  user.h  user.pb.h  user_service_impl.cpp
src/example/: CMakeLists.txt
src/example/src/: UserService.cpp  user.pb.cc
src/liveStream/: ServiceRegistrar.cpp  ServiceRegistrar.h  StreamManager.cpp  StreamManager.h  liveStream.cpp  register.cpp
src/third/protobuf/lib/: libprotobuf-lite.la  libprotobuf-lite.so.29  libprotobuf.la  libprotobuf.so.29  libprotoc.la  libprotoc.so.29
src/third/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
